4.4.9 -> 4.5:
	- jbj: expose intFormat() for use by ":rpn()".
	- jbj: backport remaining header ext tags/formats.
	- jbj: hotwire -luuid and backport rpmuuid.[ch].
	- jbj: add expanded build scripts for --specsrpm --queryformat
	- jbj: retrofit some arbitrary tagno's.
	- jbj: fix: is_selinux_enbled() > 0 is the correct test.
	- rpm.org: Mask signals while moving rebuilt rpmdb into place.
	- rpm.org: Restore rpmdb selinux contexts to default after rebuild (#442149)
	- jbj: debuginfo: refactor 2 existing upgrade policy rules before
	    adding a new contextually sensitive rule for -debuginfo packages.
	- jbj: debuginfo: add general rpmdbCount() to get number of items for
	    any tag index, not just RPMTAG_NAME as was in rpmdbCountPackages().
	- jbj: install rpmmtree.8, update POTFILES.in & Doxyfiles.in.
	- jbj: add %_build_iconsize macro to permit configuration.
	- jbj: trash-and-restore macro config for multiple CLI arg builds.
	- jbj: tests: disable *UUID tests, enable rpmrepo --database coverage.
	- jbj: rpmrepo: correct requiressql tag name typo, enable WITH_SQLITE.
	- jbj: add header tag extension to extract baseurl.
	- jbj: generalize :utf8 to :iconv(UTF-8) iconv(3) conversions.
	- jbj: fix: handle '%{arch}\' with \ at end-of-string correctly.
	- jbj: fix: force string array return for RPMTAG_HEADERI18NTABLE.
	- jbj: tests: verify ref/* data using rpmdigest/rpmmtree.
	- jbj: move rpmdigest/rpmmtree/rpmrepo back to tools/ for installation.
	- jbj: tests: verify rpmrepo XML spewage using popt-1.14.
	- jbj: tests: verify XML/YAML markup queries using popt-1.14.
	- jbj: tests: download popt-1.14 packages for use in tests.
	- jbj: yaml: fix: single element string arrays had extra "- ".
	- jbj: yaml: remove the hotwired hack for SRPM dirnames indentation.
	- jbj: backport --queryformat pipeline syntax from HEAD.
	- jbj: rpmsw: add rpmswPrint to display stopwtch results.
	- jbj: rpmdigest: s/--all/--alldigests/ w rpmio "make check".